# src/app/authentication/commons/constants/routes.go
@@ -5,6 +5,8 @@ const (
 	SwaggerRoute              = "/swagger/*any"
 	AuthenticationHealthCheck = "/authentication/health-check"
 	Metrics                   = "/metrics"
-	SignIn                    = "/authentication/signin"
-	DocsAnyPath               = "/docs/*any"
+)
+
+const (
+	SignIn = "/signin"
 )
