# src/app/authentication/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/v1/authentication/signin": {
+        "/v1/signin": {
             "post": {
                 "description": "Handle sign-in request and authenticate the user",
                 "consumes": [
@@ -59,10 +59,12 @@
                 "password": {
                     "type": "string",
                     "maxLength": 20,
-                    "minLength": 8
+                    "minLength": 8,
+                    "example": "Goat@018"
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "virat"
                 }
             }
         }
