# src/app/authentication/handler/signInHandler.go
@@ -4,11 +4,23 @@ import (
 	"authentication/business"
 	"authentication/commons/constants"
 	"authentication/models"
-	"github.com/gin-gonic/gin"
 	"net/http"
 	genericConstants "stock_broker_application/src/constants"
 	"stock_broker_application/src/utils/validations"
+
+	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 )
+
+type signInController struct {
+	service *business.SignInService
+}
+
+func NewSignInController(service *business.SignInService) *signInController {
+	return &signInController{
+		service: service,
+	}
+}
 
 // SignInHandler handles the sign-in request
 // @Summary Handle sign-in request
@@ -19,30 +31,32 @@ import (
 // @Success 200 {object} string "User authenticated successfully"
 // @Failure 400 {object} string "Bad request"
 // @Failure 401 {object} string "Unauthorized"
-// @Router /v1/authentication/signin [post]
-func SignInHandler(userService *business.SignInService, otpService *business.OTPService) gin.HandlerFunc {
-	return func(context *gin.Context) {
-		var signInRequest models.SignInRequest
+// @Router /v1/signin [post]
+func (controller *signInController) HandleSignIn(context *gin.Context) {
+	var signInRequest models.SignInRequest
 
-		if err := context.ShouldBindJSON(&signInRequest); err != nil {
-			context.JSON(http.StatusBadRequest, constants.ErrorBadRequest)
-			return
-		}
-		if err := validations.GetCustomValidator(context.Request.Context()).Struct(signInRequest); err != nil {
-			context.JSON(http.StatusBadRequest, gin.H{genericConstants.GenericJSONErrorMessage: err.Error()})
-			return
-		}
-		if err := userService.SignIn(signInRequest); err != nil {
-			context.JSON(http.StatusUnauthorized, constants.ErrorMessageAuthenticationFailed)
-			return
-		}
+	if err := context.ShouldBindJSON(&signInRequest); err != nil {
+		context.JSON(http.StatusBadRequest, constants.ErrorBadRequest)
+		return
+	}
+	// Validate the SignInRequest struct using custom validation
+	if err := validations.GetCustomValidator(context.Request.Context()).Struct(signInRequest); err != nil {
+		validationErrors, _ := validations.FormatValidationErrors(context.Request.Context(), err.(validator.ValidationErrors))
+		context.JSON(http.StatusBadRequest, gin.H{
+			genericConstants.GenericJSONErrorMessage: genericConstants.ValidatorError,
+			genericConstants.ValidationErrors:        validationErrors,
+		})
+		return
+	}
+	if err := controller.service.SignIn(signInRequest); err != nil {
+		context.JSON(http.StatusUnauthorized, constants.ErrorMessageAuthenticationFailed)
+		return
+	}
 
-		context.JSON(http.StatusOK, constants.SuccessMessageSignIn)
+	context.JSON(http.StatusOK, constants.SignInSuccessMessage)
 
-		if err := otpService.GenerateAndSaveOTP(signInRequest.UserName); err != nil {
-			context.JSON(http.StatusInternalServerError, constants.ErrorGenerateAndSaveOTP)
-			return
-		}
-
+	if err := controller.service.GenerateAndSaveOTP(signInRequest.UserName); err != nil {
+		context.JSON(http.StatusInternalServerError, constants.ErrorGenerateAndSaveOTP)
+		return
 	}
 }
